export class Team {
    constructor(public name: string, public coach: string) {}
}
