export class Position {
    constructor(public name: string, public role: string) {}
}
