export class Stats {
    constructor(public goals: number, public assists: number, public matches: number) {}
}